force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <label>Loan</label>
    <nameField>
        <displayFormat>LN-{000000}</displayFormat>
        <label>LOAN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>