force-app/main/default/objects/Loan__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BROKER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LOAN (BROKER)</relationshipLabel>
    <relationshipName>Broker</relationshipName>
    <type>Lookup</type>
</CustomField>