force-app/main/default/objects/Loan__c/fields/CapatalizationDate__c.field-meta.xml
<CustomField>
    <fullName>CapatalizationDate__c</fullName>
    <label>CAPITALIZATION DATE</label>
    <type>Date</type>
</CustomField>