force-app/main/default/objects/Loan__c/fields/ContractID__c.field-meta.xml
<CustomField>
    <fullName>ContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CONTRACT ID</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>LOAN</relationshipLabel>
    <relationshipName>LOAN</relationshipName>
    <type>Lookup</type>
</CustomField>