force-app/main/default/objects/Loan__c/fields/InterestsPaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>InterestsPaymentFrequency__c</fullName>
    <label>INTERESTS PAYMENT FREQUENCY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>