force-app/main/default/objects/Loan__c/fields/InterestsPaymentOnDate__c.field-meta.xml
<CustomField>
    <fullName>InterestsPaymentOnDate__c</fullName>
    <label>INTERESTS PAYMENT ON DATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Date</valueSetName>
    </valueSet>
</CustomField>