force-app/main/default/objects/Loan__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LENDER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LOAN</relationshipLabel>
    <relationshipName>Lender</relationshipName>
    <type>Lookup</type>
</CustomField>