force-app/main/default/objects/Loan__c/fields/LoanCodeFromLender__c.field-meta.xml
<CustomField>
    <fullName>LoanCodeFromLender__c</fullName>
    <label>LOAN CODE FROM LENDER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>