force-app/main/default/objects/Loan__c/fields/LoanCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>LoanCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOAN CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>LOAN (CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>LoanCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>