force-app/main/default/objects/Loan__c/fields/LoanDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>LoanDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOAN DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>LOAN (DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>LoanDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>