force-app/main/default/objects/Loan__c/fields/LoanDescription__c.field-meta.xml
<CustomField>
    <fullName>LoanDescription__c</fullName>
    <label>LOAN DESCRIPTION</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>