force-app/main/default/objects/Loan__c/fields/LoanTermMonth__c.field-meta.xml
<CustomField>
    <fullName>LoanTermMonth__c</fullName>
    <label>LOAN TERM(MONTH)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>