force-app/main/default/objects/Loan__c/fields/PenaltyCondition__c.field-meta.xml
<CustomField>
    <fullName>PenaltyCondition__c</fullName>
    <label>PENALTY CONDITION</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>