force-app/main/default/objects/Loan__c/fields/PreviousLoanID__c.field-meta.xml
<CustomField>
    <fullName>PreviousLoanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PREVIOUS LOAN ID</label>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>NEXT LOAN</relationshipLabel>
    <relationshipName>Loan</relationshipName>
    <type>Lookup</type>
</CustomField>