force-app/main/default/objects/Loan__c/fields/RepaymentAmountPerMonth__c.field-meta.xml
<CustomField>
    <fullName>RepaymentAmountPerMonth__c</fullName>
    <label>REPAYMENT AMOUNT PER MONTH(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>