force-app/main/default/objects/Loan__c/fields/RollupFMSUnpaidBalBuyFCY__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnpaidBalBuyFCY__c</fullName>
    <label>ROLLUP FMS UNPAID BAL OF BUYING(FCY)</label>
    <summarizedField>FMSBillLoan__c.FMSUnpaidBalOfBuyingUSD__c</summarizedField>
    <summaryForeignKey>FMSBillLoan__c.LoanID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>