force-app/main/default/objects/Loan__c/fields/RollupFMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>ROLLUP FMS UNPAID BAL OF BUYING(LOCAL)</label>
    <summarizedField>FMSBillLoan__c.FMSUnpaidBalOfBuyingLocal__c</summarizedField>
    <summaryForeignKey>FMSBillLoan__c.LoanID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>