force-app/main/default/objects/Loan__c/fields/RollupPIUnpaidBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupPIUnpaidBalanceLocal__c</fullName>
    <label>ROLLUP P/I UNPAID BAL(LOCAL)</label>
    <summarizedField>PILoan__c.UnpaidBalancePILocalForLoan__c</summarizedField>
    <summaryForeignKey>PILoan__c.LoanID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>