force-app/main/default/objects/Loan__c/fields/RollupPIUnpaidBalFCY__c.field-meta.xml
<CustomField>
    <fullName>RollupPIUnpaidBalFCY__c</fullName>
    <label>ROLLUP P/I UNPAID BAL(FCY)</label>
    <summarizedField>PILoan__c.UnpaidBalancePIUSDForBank__c</summarizedField>
    <summaryForeignKey>PILoan__c.LoanID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>