force-app/main/default/objects/Loan__c/fields/RollUpRepaymentAmountPaid__c.field-meta.xml
<CustomField>
    <fullName>RollUpRepaymentAmountPaid__c</fullName>
    <label>ROLLUP REPAYMENT AMOUNT PAID(LOCAL)</label>
    <summarizedField>LoanRepayment__c.AmountPaid__c</summarizedField>
    <summaryForeignKey>LoanRepayment__c.LoanID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>