force-app/main/default/objects/Loan__c/fields/RollupWMSUnpaidBalBuyFCY__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalBuyFCY__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUYING(FCY)</label>
    <summarizedField>WMSBillLoan__c.WMSUnpaidBalOfBuyingUSD__c</summarizedField>
    <summaryForeignKey>WMSBillLoan__c.LoanID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>