force-app/main/default/objects/Loan__c/fields/TermType__c.field-meta.xml
<CustomField>
    <fullName>TermType__c</fullName>
    <label>TERM TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TermType</valueSetName>
    </valueSet>
</CustomField>