force-app/main/default/objects/Loan__c/recordTypes/ClosedEnddeLoans.recordType-meta.xml
<RecordType>
    <fullName>ClosedEnddeLoans</fullName>
    <active>true</active>
    <description>One-Time loan that fixed amount is borrowed and then paid back over a specified period.</description>
    <label>Closed-Ended Loans-Local</label>
</RecordType>