force-app/main/default/objects/Loan__c/recordTypes/ClosedEndedLoanFCY.recordType-meta.xml
<RecordType>
    <fullName>ClosedEndedLoanFCY</fullName>
    <active>true</active>
    <label>Closed-Ended Loan-FCY</label>
</RecordType>