force-app/main/default/objects/Loan__c/recordTypes/OpenEndedLoan.recordType-meta.xml
<RecordType>
    <fullName>OpenEndedLoan</fullName>
    <active>true</active>
    <description>Borrow over and over buy have have a credit limit which is the maximum amount borrow at one time.</description>
    <label>Open-Ended Loan-Local</label>
</RecordType>