force-app/main/default/objects/Loan__c/recordTypes/OpenEndedLoanFCY.recordType-meta.xml
<RecordType>
    <fullName>OpenEndedLoanFCY</fullName>
    <active>true</active>
    <label>Open-Ended Loan-FCY</label>
</RecordType>