force-app/main/default/objects/Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>LoanStatus__c</columns>
    <columns>Lender__c</columns>
    <columns>Active__c</columns>
    <columns>OpeningBalance__c</columns>
    <columns>LoanAmount__c</columns>
    <columns>ClosingBalance__c</columns>
    <columns>Interests__c</columns>
    <columns>InterestsPaymentFrequency__c</columns>
    <columns>InterestsPaymentOnDate__c</columns>
    <columns>AccountedDate__c</columns>
    <columns>LoanTermMonth__c</columns>
    <columns>LoanTermYear__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>